--- a/src/templates/conteudo/apresentacao/Apresentacao.css
+++ b/src/templates/conteudo/apresentacao/Apresentacao.css
@@ -23,6 +23,52 @@
     font-size: large;
 }
 
+.spansAposImagem {
+    margin-top: 5vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.spansAposImagem div {
+    margin: 2vw;
+    width: 20%;
+}
+
+.comoFazemos {
+    background-color: whitesmoke;
+}
+
+.cases {
+    background-color: whitesmoke;
+}
+
+.casesProfile {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.divCases {
+    margin: 1vh;
+    width: auto;
+
+}
+
+.conhecerMais {
+    color: white;
+    width: 100%;
+    height: 40vh;
+    background: url(https://25844.smushcdn.com/2134630/wp-content/uploads/2015/05/parallax.jpg?lossy=1&strip=1&webp=1) center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+}
+.maisText {
+    padding-top: 10%;
+}
+
 @media only screen and (max-width: 900px) {
     .text {
         max-width: 90%;
@@ -33,4 +79,19 @@
         margin-left: 5%;
     }
 
+}
+
+@media only screen and (max-width: 800px) {
+
+    .spansAposImagem div {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 1150px) {
+
+    .divCases img {
+
+        max-width: 20vw;
+    }
 }
