--- a/src/index.css
+++ b/src/index.css
@@ -52,15 +52,16 @@ table {
 }
 
 body {
-  width: 100%;
+  width: 100vw;
   font-family: 'Be Vietnam Pro', sans-serif;
   font-family: 'Big Shoulders Display', cursive;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   overflow-x: hidden;
+
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
