--- a/src/templates/conteudo/imagemPrincipal/ImagemPrincipal.css
+++ b/src/templates/conteudo/imagemPrincipal/ImagemPrincipal.css
@@ -8,18 +8,25 @@
 }
 
 .texto {
-    margin-top: 100px;
+    margin-top: 30vh;
     color: white;
     z-index: 1;
     position: absolute
 }
 
-.imagemPrincipal  {
-        width: 100%;
-        height: 60vh;
-        background: url(https://25844.smushcdn.com/2134630/wp-content/uploads/2021/05/peter-gombos-8y3e2M6APy4-unsplash-1-scaled.jpg?lossy=1&strip=1&webp=1) center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+.imagemPrincipal {
+    width: 100%;
+    height: 60vh;
+    background: url(https://25844.smushcdn.com/2134630/wp-content/uploads/2021/05/peter-gombos-8y3e2M6APy4-unsplash-1-scaled.jpg?lossy=1&strip=1&webp=1) center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+@media only screen and (max-width: 900px) {
+    .texto {
+        margin-top: 20vh;
     }
+
+}
