--- a/src/templates/footer/Footer.css
+++ b/src/templates/footer/Footer.css
@@ -1,6 +1,6 @@
 .footer{
     height: 400px;
-    background-color: black;
+    background-color: rgb(51, 50, 50);
     color: whitesmoke;
     padding-left: 5vw;
     display: flex;
