--- a/src/templates/sobre/Sobre.css
+++ b/src/templates/sobre/Sobre.css
@@ -1,21 +1,45 @@
 .sobre {
     text-align: center;
-    margin-bottom: 20vh;
+    min-height: 90vh;
 }
-.sobreImg{
-    max-width: 45vw;
-    height: auto;
-    width: auto;
-}
-.descricao {
+
+.divFlex {
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.descricaoSobre {
+    min-width: 45vh;
+    max-height: 80vh;
+    margin-top: 5vw;
+   
+
+}
+
+.sobreImg {
+    max-width: 50vw;
+    max-height: 40vh;
+    min-width: 40vw;
+   
 }
 
 .sobreTexto {
-    max-width: 45vw;
-    margin-top: 5vw;
+    max-width: 50vw;
+    max-height: 40vh;
     padding: 3vw;
     text-align: justify;
+    line-height: 1.5rem;
+}
+
+
+@media  only screen and (max-width: 900px) {
+    .descricaoSobre {
+        width: 100vw;
+        
+    }
+    .sobreTexto{
+        max-width: 90vw;
+       
+    }
 }
